--- a/src/components/Pages/Visitors/style.scss
+++ b/src/components/Pages/Visitors/style.scss
@@ -7,7 +7,23 @@
     color: var(--text-color);
     text-align: center;
   }
+  .visitor-wrapper {
+    display: flex;
+  }
 
+  .visitors-all-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 100vh;
+    background-color: var(--background-color);
+  }
+
+  .navigation-underline {
+    width: 100%;
+    padding: 0;
+    margin: 3px;
+  }
   .form-container {
     background-color: var(--card-bg);
     padding: 0 30px;
