--- a/src/components/Pages/Visitors/style.scss
+++ b/src/components/Pages/Visitors/style.scss
@@ -1,5 +1,6 @@
 .visitor-add-container {
   justify-content: center;
+  height: 100vh;
   background-color: var(--background-color);
   .visitor-add-title {
     margin-bottom: 20px;
@@ -10,7 +11,9 @@
   .visitor-wrapper {
     display: flex;
   }
-
+  .mb-3 {
+    margin-bottom: 10px !important;
+  }
   .visitors-all-container {
     display: flex;
     flex-direction: column;
@@ -25,29 +28,42 @@
     margin: 3px;
   }
   .form-container {
+    margin: 0 auto;
     background-color: var(--card-bg);
-    padding: 0 30px;
+    padding: 12px 18px 0;
     border-radius: 8px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    width: auto; /* Ensure that the width adjusts based on content */
-    max-width: 100%; /* Make sure the form container doesn't overflow on small screens */
+    width: 50%;
+
     box-sizing: border-box;
     color: var(--text-color-secondary) !important;
   }
 
   .form-label-head {
     color: var(--text-color-secondary) !important;
-    font-size: 1.25rem;
+    font-size: 1rem;
+    margin-bottom: 0;
+    font-weight: var(--font-weight-bold);
+  }
+  .col-md-3 {
+    display: flex;
+
+    align-items: flex-end;
+    gap: 12px;
   }
 
   .form-control {
     background-color: var(--card-bg);
     color: var(--text-color);
     border: 1px solid var(--border-color);
-    border-radius: 4px;
+    // border-radius: 2px;
     font-size: var(--font-size-base);
-    padding: 10px !important;
+    padding: 4px !important;
+    margin-bottom: 10px;
     transition: border-color 0.3s, background-color 0.3s;
+    &:focus {
+      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    }
   }
 
   .photo-preview {
@@ -68,8 +84,10 @@
   .photo-input {
     position: relative;
     display: flex;
-    width: 70px; // Adjust the size as needed
-    height: 70px; // Adjust the size as needed
+    min-width: 50px;
+    height: 50px;
+    max-width: 60px; // Adjust the size as needed
+    max-height: 60px; // Adjust the size as needed
     overflow: hidden;
     border-radius: 50%;
     border: 2px var(--border-color); // Optional, for a border around the image
@@ -85,8 +103,8 @@
 
   .photo-placeholder {
     display: flex;
-    width: 70px;
-    height: 70px;
+    width: 60px;
+    height: 60px;
     overflow: hidden;
     border-radius: 50%;
     // border: 2px dashed #ccc;
@@ -100,158 +118,15 @@
 
   &-footer {
     display: flex;
+    flex-direction: column;
     justify-content: center;
-    gap: 10px;
-    padding-top: 10px;
 
     button {
       flex: 1 1 50%;
+      border-radius: 0px;
     }
   }
 
-  // Form container for adding visitors
-  // .visitor-add-form {
-  //   background-color: var(--card-bg);
-  //   // padding: 20px 30px;
-  //   border-radius: 8px;
-  //   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-
-  //   overflow-y: auto;
-  //   box-sizing: border-box;
-
-  //   .form-group {
-  //     margin-bottom: 15px;
-  //   }
-
-  //   label {
-  //     display: block;
-  //     margin-bottom: 5px;
-  //     font-weight: var(--font-weight-bold);
-  //     color: var(--text-color);
-  //   }
-
-  //   input,
-  //   select,
-  //   textarea {
-  //     width: 100%;
-  //     padding: 10px;
-  //     border: 1px solid var(--border-color);
-  //     border-radius: 4px;
-  //     font-size: var(--font-size-base);
-  //     background-color: var(--background-color);
-  //     transition: border-color 0.3s, background-color 0.3s;
-  //   }
-
-  //   input:focus,
-  //   select:focus,
-  //   textarea:focus {
-  //     border-color: var(--primary-color);
-  //     outline: none;
-  //     background-color: #fff;
-  //   }
-
-  //   .submit-button,
-  //   .cancel-button {
-  //     background-color: var(--primary-color);
-  //     color: white;
-  //     padding: 10px 15px;
-  //     border: none;
-  //     border-radius: 4px;
-  //     font-size: var(--font-size-base);
-  //     cursor: pointer;
-  //     width: 100%;
-  //     text-align: center;
-  //     transition: background-color 0.3s ease;
-  //   }
-
-  //   .cancel-button {
-  //     background-color: var(--secondary-color);
-  //     color: white;
-  //   }
-
-  //   // ы
-  //   // Adjust styling for photo input and webcam preview
-
-  //   .webcam-container {
-  //     width: 250px;
-  //     height: 250px;
-  //     overflow: hidden;
-  //     position: relative;
-
-  //     video {
-  //       width: 100%;
-  //       height: 100%;
-  //       object-fit: cover;
-  //       /* This ensures the webcam video fills the container */
-  //     }
-  //   }
-
-  //   .plus-icon {
-  //     color: #007bff;
-  //   }
-
-  //   .capture-button,
-  //   .cancel-webcam,
-  //   .webcam-button {
-  //     // padding: 4px 6px;
-  //     // font-size: var(--font-size-base);
-  //     // background-color: var(--primary-color);
-  //     // color: white;
-  //     // border: none;
-  //     // border-radius: 2px;
-  //     // cursor: pointer;
-  //     // transition: background-color 0.3s;
-
-  //     display: block;
-  //     width: 100%;
-  //     padding: 0.375rem 0.75rem;
-  //     font-size: 1rem;
-  //     font-weight: 400;
-  //     line-height: 1.5;
-  //     color: var(--bs-body-color);
-  //     appearance: none;
-  //     background-color: var(--bs-body-bg);
-  //     background-clip: padding-box;
-  //     border: var(--bs-border-width) solid var(--bs-border-color);
-  //     border-radius: var(--bs-border-radius);
-  //     transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-  //   }
-
-  //   .capture-button:hover,
-  //   .cancel-webcam:hover,
-  //   .webcam-button:hover {
-  //     background-color: var(--secondary-color);
-  //   }
-
-  //   // Form labels and buttons inside the form container
-  //   .form-container {
-  //   }
-
-  //   .form-label {
-  //     font-weight: var(--font-weight-bold);
-  //     font-size: 16px !important;
-  //     color: var(--text-color);
-  //   }
-
-  //   .form-label-head {
-  //     font-weight: var(--font-weight-bold);
-  //     font-size: 14px !important;
-  //     color: var(--text-color);
-  //     margin-bottom: 6px !important;
-  //   }
-
-  //   .actions {
-  //     display: flex;
-  //     align-items: center;
-  //     justify-content: center;
-  //     gap: 10px;
-  //     padding-top: 10px;
-  //   }
-  // }
-
-  // Form elements styling
-
-  // Responsive Styling for smaller screens
   @media (max-width: 600px) {
     .visitor-view-card {
       width: 100%;
@@ -259,3 +134,230 @@
     }
   }
 }
+// //////  VIEW////////////////////////////////////////
+.visitor-view-container {
+  padding: 10px;
+
+  .visitor-view-card {
+    background-color: var(--card-bg);
+    border: 1px solid var(--border-color);
+    border-radius: 5px;
+    padding: 20px;
+    width: fit-content;
+    height: fit-content;
+    display: flex;
+    flex-direction: column;
+    // gap: 20px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+
+    .visitor-photo {
+      flex: 1 1 150px;
+      max-width: 150px;
+
+      .visitor-photo-img {
+        width: 100%;
+        // height: auto;
+        border-radius: 5px;
+        border: 1px solid var(--border-color-light);
+        // object-fit: cover;
+      }
+
+      .visitor-photo-frame {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+        height: 150px;
+        background-color: var(--background-secondary);
+        border-radius: 5px;
+        color: var(--text-muted);
+        font-size: 14px;
+        text-align: center;
+        border: 1px dashed var(--border-color-light);
+      }
+    }
+
+    .visitor-info {
+      // flex: 2 1 300px;
+      display: flex;
+      flex-direction: column;
+      p {
+        margin: 10px 0;
+        color: var(--text-color-primary);
+        display: flex;
+        gap: 10px;
+
+        strong {
+          color: var(--text-color-secondary);
+          font-weight: 600;
+        }
+      }
+    }
+
+    .btn-view-visitor {
+      margin-top: 20px;
+      padding: 10px 20px;
+      border-radius: 5px;
+      text-decoration: none;
+      font-size: var(--font-size-base);
+      font-weight: 600;
+      display: inline-block;
+      text-align: center;
+
+      &-secondary {
+        background-color: var(--btn-secondary-bg);
+        color: var(--btn-secondary-text);
+        border: 1px solid var(--btn-secondary-border);
+
+        &:hover {
+          background-color: var(--btn-secondary-hover-bg);
+          color: var(--btn-secondary-hover-text);
+        }
+      }
+    }
+  }
+}
+
+// Form container for adding visitors
+// .visitor-add-form {
+//   background-color: var(--card-bg);
+//   // padding: 20px 30px;
+//   border-radius: 8px;
+//   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+
+//   overflow-y: auto;
+//   box-sizing: border-box;
+
+//   .form-group {
+//     margin-bottom: 15px;
+//   }
+
+//   label {
+//     display: block;
+//     margin-bottom: 5px;
+//     font-weight: var(--font-weight-bold);
+//     color: var(--text-color);
+//   }
+
+//   input,
+//   select,
+//   textarea {
+//     width: 100%;
+//     padding: 10px;
+//     border: 1px solid var(--border-color);
+//     border-radius: 4px;
+//     font-size: var(--font-size-base);
+//     background-color: var(--background-color);
+//     transition: border-color 0.3s, background-color 0.3s;
+//   }
+
+//   input:focus,
+//   select:focus,
+//   textarea:focus {
+//     border-color: var(--primary-color);
+//     outline: none;
+//     background-color: #fff;
+//   }
+
+//   .submit-button,
+//   .cancel-button {
+//     background-color: var(--primary-color);
+//     color: white;
+//     padding: 10px 15px;
+//     border: none;
+//     border-radius: 4px;
+//     font-size: var(--font-size-base);
+//     cursor: pointer;
+//     width: 100%;
+//     text-align: center;
+//     transition: background-color 0.3s ease;
+//   }
+
+//   .cancel-button {
+//     background-color: var(--secondary-color);
+//     color: white;
+//   }
+
+//   // ы
+//   // Adjust styling for photo input and webcam preview
+
+//   .webcam-container {
+//     width: 250px;
+//     height: 250px;
+//     overflow: hidden;
+//     position: relative;
+
+//     video {
+//       width: 100%;
+//       height: 100%;
+//       object-fit: cover;
+//       /* This ensures the webcam video fills the container */
+//     }
+//   }
+
+//   .plus-icon {
+//     color: #007bff;
+//   }
+
+//   .capture-button,
+//   .cancel-webcam,
+//   .webcam-button {
+//     // padding: 4px 6px;
+//     // font-size: var(--font-size-base);
+//     // background-color: var(--primary-color);
+//     // color: white;
+//     // border: none;
+//     // border-radius: 2px;
+//     // cursor: pointer;
+//     // transition: background-color 0.3s;
+
+//     display: block;
+//     width: 100%;
+//     padding: 0.375rem 0.75rem;
+//     font-size: 1rem;
+//     font-weight: 400;
+//     line-height: 1.5;
+//     color: var(--bs-body-color);
+//     appearance: none;
+//     background-color: var(--bs-body-bg);
+//     background-clip: padding-box;
+//     border: var(--bs-border-width) solid var(--bs-border-color);
+//     border-radius: var(--bs-border-radius);
+//     transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+//   }
+
+//   .capture-button:hover,
+//   .cancel-webcam:hover,
+//   .webcam-button:hover {
+//     background-color: var(--secondary-color);
+//   }
+
+//   // Form labels and buttons inside the form container
+//   .form-container {
+//   }
+
+// .form-label {
+//   font-weight: var(--font-weight-bold);
+//   font-size: 16px !important;
+//   color: var(--text-color);
+// }
+
+//   .form-label-head {
+//     font-weight: var(--font-weight-bold);
+//     font-size: 14px !important;
+//     color: var(--text-color);
+//     margin-bottom: 6px !important;
+//   }
+
+//   .actions {
+//     display: flex;
+//     align-items: center;
+//     justify-content: center;
+//     gap: 10px;
+//     padding-top: 10px;
+//   }
+// }
+
+// Form elements styling
+
+// Responsive Styling for smaller screens
