--- a/src/components/Pages/Visitors/style.scss
+++ b/src/components/Pages/Visitors/style.scss
@@ -28,15 +28,17 @@
     margin: 3px;
   }
   .form-container {
+    position: relative;
+    padding-bottom: 16px;
     margin: 0 auto;
     background-color: var(--card-bg);
-    padding: 12px 18px 0;
+    // padding: 12px 18px 0;
     border-radius: 8px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     width: 50%;
-
     box-sizing: border-box;
     color: var(--text-color-secondary) !important;
+
   }
 
   .form-label-head {
@@ -77,15 +79,15 @@
 
   .photo-preview img {
     object-fit: cover;
-    width: 70px;
-    height: 70px;
+    width: 150px;
+    height: 150px;
   }
 
   .photo-input {
     position: relative;
     display: flex;
-    min-width: 50px;
-    height: 50px;
+    min-width: 150px;
+    min-height: 150px;
     max-width: 60px; // Adjust the size as needed
     max-height: 60px; // Adjust the size as needed
     overflow: hidden;
@@ -218,146 +220,53 @@
   }
 }
 
-// Form container for adding visitors
-// .visitor-add-form {
-//   background-color: var(--card-bg);
-//   // padding: 20px 30px;
-//   border-radius: 8px;
-//   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+.form-actions {
+  bottom: 10px;
+  right: 10px;
+  display: flex;
+  gap: 10px;
 
-//   overflow-y: auto;
-//   box-sizing: border-box;
+  button {
+    padding: 10px 15px;
+    font-size: var(--font-size-base);
+    border-radius: 4px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
 
-//   .form-group {
-//     margin-bottom: 15px;
-//   }
+    &:first-child {
+      background-color: var(--primary-color);
+      color: #fff;
+      border: none;
 
-//   label {
-//     display: block;
-//     margin-bottom: 5px;
-//     font-weight: var(--font-weight-bold);
-//     color: var(--text-color);
-//   }
+      // &:hover {
+      //   background-color: darken(var(--primary-color), 10%);
+      // };
+    }
 
-//   input,
-//   select,
-//   textarea {
-//     width: 100%;
-//     padding: 10px;
-//     border: 1px solid var(--border-color);
-//     border-radius: 4px;
-//     font-size: var(--font-size-base);
-//     background-color: var(--background-color);
-//     transition: border-color 0.3s, background-color 0.3s;
-//   }
+    &:last-child {
+      background-color: var(--danger-color);
+      color: #fff;
+      border: none;
 
-//   input:focus,
-//   select:focus,
-//   textarea:focus {
-//     border-color: var(--primary-color);
-//     outline: none;
-//     background-color: #fff;
-//   }
+      // &:hover {
+      //   background-color: darken(var(--danger-color), 10%);
+      // };
+    }
+  }
+}
 
-//   .submit-button,
-//   .cancel-button {
-//     background-color: var(--primary-color);
-//     color: white;
-//     padding: 10px 15px;
-//     border: none;
-//     border-radius: 4px;
-//     font-size: var(--font-size-base);
-//     cursor: pointer;
-//     width: 100%;
-//     text-align: center;
-//     transition: background-color 0.3s ease;
-//   }
+@media (max-width: 768px) {
+  .form-container {
+    padding-bottom: 80px; // Increase padding for smaller screens.
+  }
 
-//   .cancel-button {
-//     background-color: var(--secondary-color);
-//     color: white;
-//   }
+  .actions {
+    flex-direction: column; // Stack buttons vertically.
+    bottom: 20px; // Adjust bottom padding for smaller screens.
+    right: 20px;
 
-//   // ы
-//   // Adjust styling for photo input and webcam preview
-
-//   .webcam-container {
-//     width: 250px;
-//     height: 250px;
-//     overflow: hidden;
-//     position: relative;
-
-//     video {
-//       width: 100%;
-//       height: 100%;
-//       object-fit: cover;
-//       /* This ensures the webcam video fills the container */
-//     }
-//   }
-
-//   .plus-icon {
-//     color: #007bff;
-//   }
-
-//   .capture-button,
-//   .cancel-webcam,
-//   .webcam-button {
-//     // padding: 4px 6px;
-//     // font-size: var(--font-size-base);
-//     // background-color: var(--primary-color);
-//     // color: white;
-//     // border: none;
-//     // border-radius: 2px;
-//     // cursor: pointer;
-//     // transition: background-color 0.3s;
-
-//     display: block;
-//     width: 100%;
-//     padding: 0.375rem 0.75rem;
-//     font-size: 1rem;
-//     font-weight: 400;
-//     line-height: 1.5;
-//     color: var(--bs-body-color);
-//     appearance: none;
-//     background-color: var(--bs-body-bg);
-//     background-clip: padding-box;
-//     border: var(--bs-border-width) solid var(--bs-border-color);
-//     border-radius: var(--bs-border-radius);
-//     transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-//   }
-
-//   .capture-button:hover,
-//   .cancel-webcam:hover,
-//   .webcam-button:hover {
-//     background-color: var(--secondary-color);
-//   }
-
-//   // Form labels and buttons inside the form container
-//   .form-container {
-//   }
-
-// .form-label {
-//   font-weight: var(--font-weight-bold);
-//   font-size: 16px !important;
-//   color: var(--text-color);
-// }
-
-//   .form-label-head {
-//     font-weight: var(--font-weight-bold);
-//     font-size: 14px !important;
-//     color: var(--text-color);
-//     margin-bottom: 6px !important;
-//   }
-
-//   .actions {
-//     display: flex;
-//     align-items: center;
-//     justify-content: center;
-//     gap: 10px;
-//     padding-top: 10px;
-//   }
-// }
-
-// Form elements styling
-
-// Responsive Styling for smaller screens
+    button {
+      width: 100%; // Make buttons full width on smaller screens.
+    }
+  }
+}
