--- a/src/components/WebcamReact/style.scss
+++ b/src/components/WebcamReact/style.scss
@@ -5,8 +5,12 @@
   gap: 10px;
 
   &-preview {
-    max-width: 100%;
-    border-radius: 4px;
+    width: 150px;
+    height: 150px;   
+    border-radius: 50%;
+    border: 2px var(--border-color);
+    background-color: var(--link-color);
+    
   }
 
   &-actions {
