--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,5 @@
-@import "bootstrap/dist/css/bootstrap.min.css";
-@import "/src/variables.scss";
+@import 'bootstrap/dist/css/bootstrap.min.css';
+@import '/src/variables.scss';
 
 body {
   font-family: Rubik, Helvetica, Arial, serif !important;
