--- a/src/components/Pages/Visitors/style.scss
+++ b/src/components/Pages/Visitors/style.scss
@@ -38,7 +38,6 @@
     width: 50%;
     box-sizing: border-box;
     color: var(--text-color-secondary) !important;
-
   }
 
   .form-label-head {
@@ -62,7 +61,9 @@
     font-size: var(--font-size-base);
     padding: 4px !important;
     margin-bottom: 10px;
-    transition: border-color 0.3s, background-color 0.3s;
+    transition:
+      border-color 0.3s,
+      background-color 0.3s;
     &:focus {
       box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     }
