--- a/src/variables.scss
+++ b/src/variables.scss
@@ -31,7 +31,7 @@
   --breadcrumb-bg: var(--white);
   --card-bg: var(--white);
 
-  --font-family: "Roboto Flex", sans-serif;
+  --font-family: 'Roboto Flex', sans-serif;
   --font-color: #475f7b;
   --font-size-base: 1rem;
   --font-size-sm: 0.8rem;
