--- a/src/components/Pages/Visitors/Persona/style.scss
+++ b/src/components/Pages/Visitors/Persona/style.scss
@@ -1,4 +1,4 @@
-.visitor-add-container {
+.persona-add-container {
   justify-content: center;
   height: 100vh;
   background-color: var(--background-color);
