--- a/src/components/Pages/Visitors/Style_visitor_view/view.scss
+++ b/src/components/Pages/Visitors/Style_visitor_view/view.scss
@@ -1,49 +1,42 @@
-.visitor-view-container {
-  padding: 10px 20px 10px 0 !important;
-
-  .visitor-view-card {
+.visitor-view-card {
+  border: none !important;
+  background: none !important;
+  border-radius: 5px;
+  display: flex;
+  width: 100%;
+  padding: 20px;
+  display: flex;
+  width: 100% !important;
+  flex-direction: column;
+  box-shadow: none !important;
+  &-visitor-photo {
+    height: 80px !important;
+  }
+  &-header {
     background-color: var(--card-bg);
-    border: 1px solid var(--border-color);
-    border-radius: 5px;
-    // padding: 20px 20px 0 20px;
-    width: 40% !important;
-    margin: 0 auto;
     display: flex;
-    flex-direction: column;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-
-    .visitor-photo {
-      flex: 1 1 150px;
-      max-width: 150px;
-
-      .visitor-photo-img {
-        width: 100%;
-        border-radius: 5px;
-        border: 1px solid var(--border-color-light);
-      }
-
-      .visitor-photo-frame {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        background-color: var(--background-secondary);
-        border-radius: 5px;
-        color: var(--text-muted);
-        font-size: 14px;
-        text-align: center;
-      }
-    }
+    justify-content: center;
+    width: 100% !important;
+    align-items: center;
+    padding: 16px;
+    border-radius: 10px;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
 
     .visitor-info {
+      border-right: 0.5px solid var(--border-color) !important;
+      border-left: 0.5px solid var(--border-color) !important;
+      margin: 0 20px;
+      width: 100%;
       display: flex;
       flex-direction: column;
-
+      padding: 0 20px;
       p {
-        margin: 5px 0 !important;
+        width: 100% !important;
+        margin: 1px 0 !important;
         color: var(--text-color-primary);
         display: flex;
         justify-content: space-between;
-        gap: 10px;
+
         border-bottom: 1px solid var(--border-color);
 
         strong {
@@ -51,6 +44,13 @@
           font-weight: 600;
         }
       }
+    }
+    &-btns {
+      padding: 0 !important;
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+      height: auto;
     }
   }
 }
